# graphql-rust-axum

./: Cargo.toml
src/: main.rs
src/schemas/: event_schema.rs  graphql_schema.rs  mod.rs
src/sql_queries/: event_queries.rs  mod.rs
