[package]
edition = "2021"
name = "rust-graphql-axum"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.9"
async-graphql-axum = "6.0.9"
axum = "0.6.20"
chrono = "0.4.31"
env_logger = "0.10.0"
log = "0.4.20"
serde = "1.0.190"
tokio = {version = "1", features = ["full"]}
tower-http = {version = "0.3.5", features = ["fs", "cors"]}
